tests/semantic/invalid/63_i1_three_way_cycle.hulk
type A inherits C {}

type B inherits A {}

type C inherits B {}
